rubocop/examples/bad/style_FileName.rb
# This cop makes sure that Ruby source files have snake_case names.

# TODO: Use snake_case for naming files, e.g. hello_world.rb.
